tests/ui/fail/multiple_skip_remaining.stderr
error: Multiple #[destroy_ignore_remaining] attributes in "Named"
  --> tests/ui/fail/multiple_skip_remaining.rs:15:5
   |
15 |     #[destroy_ignore_remaining]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Multiple #[destroy_ignore_remaining] attributes in "Unnamed"
  --> tests/ui/fail/multiple_skip_remaining.rs:23:5
   |
23 |     #[destroy_ignore_remaining]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
